# agentic-ai

./: .gitignore
01_foundations/: 02_simple_chat_agent.py
01_open_ai/: gemini_test_file.py
autogen_05/: 01_lab_agent_chat.ipynb  02_chat_agent.ipynb  03_autogen_core.ipynb  04_autogen_distributed.ipynb
autogen_05/lab_05_project/: agent.py  agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  creator.py  gemini_client.py  idea2.md  idea3.md  idea4.md  idea5.md  lab_constants.py  messages.py  world.py
autogen_05/sandbox/: flights.md
common/: constants.py  open_ai_gemini_client.py
crew_ai_03/engineering_team_05/: README.md  pyproject.toml
crew_ai_03/engineering_team_05/src/engineering_team_05/: crew.py  main.py
crew_ai_03/engineering_team_05/src/engineering_team_05/config/: agents.yaml
crew_ai_03/engineering_team_05/src/engineering_team_05/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crew_ai_03/stock_picker_03/: README.md  pyproject.toml
crew_ai_03/stock_picker_03/src/stock_picker_03/: crew.py  main.py
crew_ai_03/stock_picker_03/src/stock_picker_03/config/: agents.yaml
crew_ai_03/stock_picker_03/src/stock_picker_03/output/: decision.md  research_report.json  trending_companies.json
crew_ai_03/stock_picker_03/src/stock_picker_03/tools/: push_notification_tool.py
foundations_01/: agent_with_pushover_04.py  chat_agent_with_validator_03.py  helpers.py  simple_chat_agent_02.py
lang_graph_04/: lab_01.ipynb  lab_02.ipynb  lab_03.ipynb
open_ai_02/: deep_research_03.py  sales_agent_02.py  simple_agent_01.py
(+38 files in other folders)
