[project]
name = "engineering_team_05"
version = "0.1.0"
description = "engineering_team_05 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
engineering_team_05 = "engineering_team_05.main:run"
run_crew = "engineering_team_05.main:run"
train = "engineering_team_05.main:train"
replay = "engineering_team_05.main:replay"
test = "engineering_team_05.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
