[project]
name = "stock_picker_03"
version = "0.1.0"
description = "stock_picker_03 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.117.1,<1.0.0"
]

[project.scripts]
stock_picker_03 = "stock_picker_03.main:run"
run_crew = "stock_picker_03.main:run"
train = "stock_picker_03.main:train"
replay = "stock_picker_03.main:replay"
test = "stock_picker_03.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
